<resources>
    <string name="app_name">MVVMLogin</string>
    <string name="activity_login_title">Zolo Login</string>
    <string name="activity_profile_title">Your Profile</string>

    <string name="hint_phone_number">YOUR PHONE NUMBER</string>
    <string name="hint_password">SET PASSWORD</string>
    <string name="hint_password_login">PASSWORD</string>
    <string name="hint_email">YOUR EMAIL ID</string>
    <string name="hint_name">YOUR NAME</string>

    <string name="bt_login">LOG IN</string>
    <string name="bt_logout">LOG OUT</string>
    <string name="bt_create_account">CREATE ACCOUNT</string>

    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_subtitle">Please enter your registered email to rest password</string>
    <string name="forgot_password_reset">Reset Password</string>

    <string name="title_zolo">ZOLO</string>
    <string name="title_desc">Rethink PGs.Think Zolo.</string>
    <string name="title_zolo_register">REGISTER</string>
    <string name="title_zolo_register_desc">Please register with zolo to continue</string>


    <string name="error_invalid_credential">Enter valid credential and try again.</string>
    <string name="error_user_already_registered">You are already registered!Please log in or select forgot password</string>

    <string name="update_profile_title">UPDATE PROFILE</string>
    <string name="update_profile_subtitle">You can update your profile below</string>
    <string name="update_profile_button_text">UPDATE PROFILE</string>
    <string name="update_profile_successful_text">Your profile is updated!</string>

    <string name="login_success">Login Successful!</string>

</resources>
