<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="forgotPasswordViewmodel"
            type="in.task.ui.forgotpassword.ForgotPasswordScreenViewModel"></variable>

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:gravity="right"
            android:padding="10dp"
            android:onClick="@{() -> forgotPasswordViewmodel.onLoginButtonClicked()}"
            android:text="@string/bt_login"
            android:textColor="@color/white"
            android:textSize="@dimen/material_text_caption"
            android:textStyle="bold"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/ivCover"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:alpha="0.1"
            android:gravity="center"
            android:text="01"
            android:textColor="@color/white"
            android:textSize="90sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textSize="@dimen/material_text_headline"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/ivCover"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ivCover" />

        <TextView
            android:id="@+id/tvTitleDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_subtitle"
            android:textColor="@color/white"
            android:textSize="@dimen/material_text_caption"
            app:layout_constraintBottom_toBottomOf="@id/ivCover"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvTitle" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/etEmailContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivCover">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etEmail"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="40dp"
                android:cursorVisible="true"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:paddingBottom="12dp"
                android:textColorHint="@color/colorAccent"
                android:textSize="@dimen/material_text_body1" />

        </android.support.design.widget.TextInputLayout>


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/ic_email_white_24dp"
            app:layout_constraintRight_toLeftOf="@+id/etEmailContainer"
            app:layout_constraintTop_toBottomOf="@+id/ivCover" />


        <Button
            android:id="@+id/btResetPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:enabled="false"
            android:onClick="@{() -> forgotPasswordViewmodel.onResetPasswordClicked()}"
            android:text="@string/forgot_password_reset"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/material_text_button"
            app:layout_constraintTop_toBottomOf="@id/etEmailContainer" />


    </android.support.constraint.ConstraintLayout>

</layout>