<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="registerViewmodel"
            type="in.task.ui.register.RegisterScreenViewModel"></variable>

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:gravity="right"
            android:onClick="@{() -> registerViewmodel.onLoginButtonClicked()}"
            android:text="@string/bt_login"
            android:textColor="@color/white"
            android:textSize="@dimen/material_text_caption"
            android:textStyle="bold"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/ivCover"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:alpha="0.1"
            android:gravity="center"
            android:text="01"
            android:textColor="@color/white"
            android:textSize="90sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_zolo_register"
            android:textColor="@color/white"
            android:textSize="@dimen/material_text_headline"
            app:layout_constraintBottom_toBottomOf="@id/ivCover"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ivCover" />

        <TextView
            android:id="@+id/tvTitleDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_zolo_register_desc"
            android:textColor="@color/white"
            android:textSize="@dimen/material_text_caption"
            app:layout_constraintBottom_toBottomOf="@id/ivCover"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvTitle" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/etPhoneNumberContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivCover">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etPhoneNumber"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:cursorVisible="true"
                android:hint="@string/hint_phone_number"
                android:inputType="phone"
                android:maxLength="12"
                android:paddingBottom="12dp"
                android:textColorHint="@color/colorAccent"
                android:textSize="@dimen/material_text_body1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/etEmailContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPhoneNumberContainer">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etEmail"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:cursorVisible="true"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:paddingBottom="12dp"
                android:textColorHint="@color/colorAccent"
                android:textSize="@dimen/material_text_body1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/etNameContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etEmailContainer">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etUserName"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:cursorVisible="true"
                android:hint="@string/hint_name"
                android:inputType="text"
                android:maxLength="12"
                android:paddingBottom="12dp"
                android:textColorHint="@color/colorAccent"
                android:textSize="@dimen/material_text_body1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/etPasswordContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left"
            android:hint="@string/hint_password"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etNameContainer"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etPassword"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:cursorVisible="true"
                android:inputType="textPassword"
                android:maxLength="12"
                android:paddingBottom="12dp"
                android:textColorHint="@color/colorAccent"
                android:textSize="@dimen/material_text_body1" />

        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_local_phone_white_24dp"
            app:layout_constraintRight_toLeftOf="@id/etPhoneNumberContainer"
            app:layout_constraintTop_toBottomOf="@id/ivCover" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_email_white_24dp"
            app:layout_constraintRight_toLeftOf="@id/etPhoneNumberContainer"
            app:layout_constraintTop_toBottomOf="@+id/etPhoneNumberContainer" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_name_white_24dp"
            app:layout_constraintRight_toLeftOf="@+id/etPhoneNumberContainer"
            app:layout_constraintTop_toBottomOf="@+id/etEmailContainer" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/ic_password_white_24dp"
            app:layout_constraintRight_toLeftOf="@id/etPhoneNumberContainer"
            app:layout_constraintTop_toBottomOf="@+id/etNameContainer" />


        <Button
            android:id="@+id/btRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:enabled="false"
            android:onClick="@{() -> registerViewmodel.onRegisterButtonClicked()}"
            android:text="@string/title_zolo_register"
            android:textColor="@android:color/black"
            android:textSize="@dimen/material_text_button"
            app:layout_constraintTop_toBottomOf="@id/etPasswordContainer" />


    </android.support.constraint.ConstraintLayout>

</layout>